bicicletas-ms/k8/bicicletas-ms-service.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: bicicletas-ms
#   labels:
#     app: bicicletas-ms
# spec:
#   ports:
#   - port: 3000
#     targetPort: http-server
#   selector:
#     app: bicicletas-ms
#   type: LoadBalancer

apiVersion: v1
kind: Service
metadata:
  name: bicicletas-ms
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    role: bicicletas-ms

# apiVersion: v1
# kind: Service
# metadata:
#   name: bicicletas-ms
#   labels:
#     app: bicicletas-ms
# spec:
#   ports:
#   - port: 3000
#     targetPort: http-server
#   selector:
#     app: bicicletas-ms
#   type: LoadBalancer
